Fix spacing issue

--- a/src/main/Login.css
+++ b/src/main/Login.css
@@ -1,7 +1,7 @@
 div.LoginContent {
     padding-top: 75px;
     margin: 5px;
-    max-width: 99%;
+    padding-left: 20px;
 }
 
 div.LoginGrid {
